# crab-keeper

./: .clippy.toml  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: design.md  progress.md  scratch.md  tdd-workflow.md
src/: lib.rs  main.rs
src/banking/: account.rs  mod.rs  time.rs  transfer.rs  types.rs
src/communication/: channel.rs  message.rs  mod.rs  process.rs
src/lamport_clock/: mod.rs  tests.rs
tests/: banking_integration_test.rs  communication_integration_test.rs  lamport_clock_integration_test.rs
tests/common/: mod.rs
